--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,197 @@
 :root {
   --biru: #176BB3;
   --kuning: #FFDD00;
+  --abu: #a0a0a0;
   --fontfamily: Arial, Helvetica, sans-serif;
+  --putih: azure;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: var(--fontfamily);
+}
+
+/* header */
+.header-wrapper {
+  border-bottom: 3px solid var(--abu);
+}
+
+/* header - nav */
+.header-wrapper .nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.header-wrapper .nav .logo {
+  padding: 5px;
+}
+.header-wrapper .nav .logo img {
+  width: 70px;
+  max-width: 100px;
+}
+.header-wrapper .nav .nav-main {
+  display: none;
+}
+.header-wrapper .nav .nav-search {
+  width: 60%;
+  margin-top: 5px;
+}
+.header-wrapper .nav .nav-search div {
+  position: relative;
+  padding: 10px;
+  border: 1px solid var(--abu);
+  border-radius: 5px;
+}
+.header-wrapper .nav .nav-search input {
+  width: 100%;
+  border: none;
+}
+.header-wrapper .nav .nav-search input:focus {
+  outline: none;
+}
+.header-wrapper .nav .nav-search button {
+  position: absolute;
+  right: 0;
+  margin-top: -10px;
+  padding: 10px 15px;
+  background: none;
+  border: none;
+}
+.header-wrapper .nav .akun {
+  display: flex;
+  align-items: center;
+}
+.header-wrapper .nav .akun button {
+  display: none;
+}
+.header-wrapper .nav .akun div i {
+  font-size: 25px;
+  margin-right: 20px;
+}
+
+/* header - search */
+.header-wrapper .search {
+  display: none;
+}
+
+/* header - nav bottom */
+.header-wrapper .nav-bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  /* background-color: red; */
+  border-top: 3px solid var(--abu);
+  position: fixed;
+  bottom: 0;
+}
+.header-wrapper .nav-bottom div {
+  margin-top: 5px;
+  text-align: center;
+  padding: 8px;
+  text-transform: capitalize;
+}
+.header-wrapper .nav-bottom div i {
+  font-size: 1.5rem;
+  margin-bottom: 5px;
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .header-wrapper {
+    width: 90%;
+    margin: auto;
+  }
+
+  /* header - nav main */
+  .header-wrapper .nav .nav-main {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 80%;
+  }
+  .header-wrapper .nav .nav-main div {
+    padding: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    color: var(--biru);
+    text-transform: uppercase;
+  }
+  .header-wrapper .nav .nav-main div a {
+    text-decoration: none;
+  }
+  .header-wrapper .nav .akun button {
+    display: block;
+    border: 1px solid var(--abu);
+    padding: 8px 12px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    margin-left: 5px;
+  }
+  .header-wrapper .nav .akun .register {
+    background: none;
+  }
+  .header-wrapper .nav .akun .login {
+    background-color: var(--biru);
+    color: azure;
+  }
+  .header-wrapper .nav .nav-search {
+    display: none;
+  }
+
+  /* header - search */
+  .header-wrapper .search {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .header-wrapper .search div {
+    position: relative;
+    padding: 10px;
+    border: 1px solid var(--abu);
+    border-radius: 5px;
+  }
+  .header-wrapper .search input {
+    width: 100%;
+    border: none;
+  }
+  .header-wrapper .search input:focus {
+    outline: none;
+  }
+  .header-wrapper .search button {
+    position: absolute;
+    right: 0;
+    margin-top: -10px;
+    padding: 10px 15px;
+    background: none;
+    border: none;
+  }
+
+  /* header - nav bottom */
+  .header-wrapper .nav-bottom {
+    display: none;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .header-wrapper {
+    width: 80%;
+    margin: auto;
+  }
+
+  /* header - nav */
+  .header-wrapper .nav .nav-main div {
+    font-size: 14px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+}
