--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,69 @@ a {
   background-color: white;
 }
 
+/* custom radio */
+.radio-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.radio-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.radio-container:hover input ~ .checkmark {
+  background-color: var(--abu);
+}
+
+/* When the radio button is checked, add a blue background */
+.radio-container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radio-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.radio-container .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
 /* header */
 .header-wrapper {
   border-bottom: 3px solid var(--abu);
@@ -730,6 +793,155 @@ a {
   border-radius: 4px;
 }
 
+/* appdua */
+/* checkout */
+.appdua-wrapper .checkout {
+  margin-top: 20px;
+}
+.appdua-wrapper .checkout .alamat {
+  background-color: var(--abuterang);
+  padding: 15px 25px 15px 15px;
+}
+.appdua-wrapper .checkout .alamat h3 {
+  margin-bottom: 20px;
+}
+.appdua-wrapper .checkout .alamat form {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 15px;
+}
+.appdua-wrapper .checkout .alamat form .alamat-detail {
+  grid-column: 1 / 4;
+}
+.appdua-wrapper .checkout .alamat form input,
+.appdua-wrapper .checkout .alamat form textarea {
+  width: 100%;
+  border: 1px solid #000;
+  padding: 7px 0 7px 7px;
+  border: 1px solid var(--abu);
+  outline: none;
+}
+
+/* appdua - cart */
+.appdua-wrapper .checkout .cart {
+  background-color: var(--abuterang);
+  padding: 20px;
+  margin-top: 10px;
+}
+.appdua-wrapper .checkout .cart h3 {
+  margin-bottom: 20px;
+}
+.appdua-wrapper .checkout .cart .list {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--putih);
+  margin-bottom: 5px;
+}
+.appdua-wrapper .checkout .cart .list > div {
+  width: 15%;
+  text-align: center;
+  padding: 10px;
+}
+.appdua-wrapper .checkout .cart .list .aksi {
+  width: 5%;
+}
+.appdua-wrapper .checkout .cart .list {
+  background-color: var(--putih);
+  display: flex;
+  justify-content: space-between;
+}
+.appdua-wrapper .checkout .cart .list > div {
+  width: 15%;
+  text-align: center;
+}
+.appdua-wrapper .checkout .cart .list .list-produk {
+  width: 45%;
+}
+.appdua-wrapper .checkout .cart .list .list-produk .container {
+  display: flex;
+}
+.appdua-wrapper .checkout .cart .list .list-produk .container img {
+  width: 100px;
+  margin-right: 10px;
+}
+.appdua-wrapper .checkout .cart .list .harga,
+.appdua-wrapper .checkout .cart .list .jumlah,
+.appdua-wrapper .checkout .cart .list .harga-total,
+.appdua-wrapper .checkout .cart .list .aksi {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.appdua-wrapper .checkout .cart .list .aksi button {
+  border: none;
+  color: var(--merah);
+}
+.appdua-wrapper .checkout .opsi {
+  background-color: var(--abuterang);
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  /* background-color: red; */
+  margin-top: 10px;
+}
+.appdua-wrapper .checkout .opsi h3 {
+  margin-bottom: 20px;
+}
+.appdua-wrapper .checkout .opsi .pengiriman {
+  width: 100%;
+}
+.appdua-wrapper .checkout .opsi .pengiriman .list .radio-container {
+  position: relative;
+}
+.appdua-wrapper .checkout .opsi .pengiriman .list p {
+  position: absolute;
+  top: 0;
+  left: 200px;
+}
+.appdua-wrapper .checkout .opsi .pembayaran {
+  width: 100%;
+}
+.appdua-wrapper .checkout .opsi .pembayaran .list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+.appdua-wrapper .checkout .opsi .pembayaran .list .radio-container {
+  position: relative;
+}
+.appdua-wrapper .checkout .total {
+  display: flex;
+  justify-content: end;
+  background-color: var(--abuterang);
+  padding: 20px;
+  margin-top: 10px;
+}
+.appdua-wrapper .checkout .total > div {
+  width: 15%;
+}
+.appdua-wrapper .checkout .total p {
+  padding: 5px;
+}
+.appdua-wrapper .checkout .total .nominal {
+  text-align: right;
+}
+.appdua-wrapper .checkout .total .nominal .nominal-text {
+  color: var(--merah);
+  font-size: x-large;
+  font-weight: bold;
+}
+.appdua-wrapper .checkout .btn-pesan {
+  background-color: var(--abuterang);
+  border-top: 1px solid var(--abu);
+  text-align: right;
+  padding: 10px 20px;
+}
+.appdua-wrapper .checkout .btn-pesan button {
+  padding: 10px 30px;
+  border: 1px solid var(--biru);
+  background-color: lightblue;
+  border-radius: 3px;
+}
+
 /* footer */
 .footer-wrapper {
   background-color: var(--putih);
@@ -981,6 +1193,12 @@ a {
   }
   .content-wrapper .cabang .cabang-list div {
     width: 250px;
+  }
+
+  /* appdua content */
+  .appdua-wrapper {
+    width: 80%;
+    margin: auto;
   }
 }
 
